# cilicon

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SERVICE.md  action.yml  cilicon.ci.yml  cilicon.yml  llms.txt  pyproject.toml
.claude/skills/cilicon/: SKILL.md
.github/workflows/: cilicon.yml  publish.yml
cilicon/: __init__.py  attest.py  baseline.py  catalog.py  cli.py  config.py  evidence.py  mcp.py  presets.py  report.py  runner.py  sizes.py  telemetry.py  testparse.py  tools.py  triage.py  vuln.py
cilicon/service/: __init__.py  app.py  auth.py  db.py  github.py  modal_app.py  orchestrator.py  settings.py
cilicon/service/static/: style.css
cilicon/service/templates/: _run_body.html  base.html  dashboard.html  login.html  project.html  run.html
docs/: architecture.md  attestation.md  configuration.md  getting-started.md  github-actions.md  results-schema.md  telemetry.md  tiers.md
examples/: cilicon-advanced.yml
examples/renode/: stm32f4_discovery.resc
src/: cortex-m.ld  firmware.c  loadtest.c  perception.c
src/esp32/: CMakeLists.txt
src/esp32/main/: main.c
src/gpu/: infer.cu
supabase/migrations/: 0001_init.sql
tests/: test_attest.py  test_cilicon.py  test_cli_evidence.py  test_cli_json.py  test_config.py  test_evidence.py  test_evidence_gate.py  test_features.py  test_github.py  test_quality.py  test_register.py  test_report.py  test_runner_script.py  test_sizes.py  test_triage.py  test_vuln.py
