[project]
name = "cilicon-ci"
version = "0.1.0"
description = "CI for real hardware — build AND boot across every chip you ship to, in parallel, owning zero hardware."
requires-python = ">=3.10"
dependencies = [
    "modal>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# the hosted service: GitHub App webhook + dashboard, persisting to Supabase
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "pyjwt[crypto]>=2.8",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cilicon = "cilicon.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cilicon", "cilicon.service"]

[tool.setuptools.package-data]
"cilicon.service" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
