[project]
name = "cilicon"
version = "0.1.2"
description = "CI that proves your code runs where it ships — build AND boot across every chip, arch, and GPU you target, in parallel, owning zero hardware."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Rana" }]
keywords = [
    "ci", "embedded", "firmware", "emulation", "qemu", "renode",
    "modal", "hardware", "gpu", "riscv", "esp32", "cortex-m",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = [
    "modal>=1.0",
    "pyyaml>=6.0",
    # Ed25519 sign/verify for `run --attestation` — the free tier's one crypto act.
    "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/neural-alloy/cilicon"
Repository = "https://github.com/neural-alloy/cilicon"
Issues = "https://github.com/neural-alloy/cilicon/issues"

[project.optional-dependencies]
# the optional reference dashboard (not the product): GitHub App + Supabase
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "pyjwt[crypto]>=2.8",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]
# expose cilicon to MCP-capable coding agents (cilicon-mcp)
mcp = [
    "mcp>=1.2",
]

[project.scripts]
cilicon = "cilicon.cli:main"
cilicon-mcp = "cilicon.mcp:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cilicon", "cilicon.service"]

[tool.setuptools.package-data]
"cilicon.service" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
